mi primer commit subiendo todo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(255, 255, 255);
+    font-family:'Times New Roman', Times, serif;
+    background-image: url("/assets/img/pwrsonajes.png");
+    background-repeat: repeat-x;
 }
+    
 
 /* NAVBAR */
 .navbar {
     display: flex;
-    background-color: #085788;
+    background-color: #4d494a;
     background-size:contain;
     color: white;
     justify-content: space-between;
@@ -15,22 +17,12 @@ body {
     padding-right: 2rem;
     margin: 0px;
 }
-
-.nav-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+.logogame{
+    width: 200px;
 }
 
-.nav-logo i, .nav-logo h1 {
-    transform: translate(30px, 0);
-}
 
-.nav-logo h1 {
-    font-size: 100%;
-    transform: translate(2rem, 0.3rem);
-}
+
 
 
 .nav-text {
@@ -45,41 +37,41 @@ body {
     color: white;
     font-weight: 600;
 }
-
-
+.logostark{
+    width: 50px;
+}
+.menu-text:hover{
+    color: #ffffff;
+    filter: drop-shadow(5px 5px 5px #141414);
+}
 
 
 /* MAIN */
 main{
     display: grid;
     grid-template-columns: 1fr;
-    background-color: rgb(162, 158, 161);
+    background-color: rgb(255, 255, 255);
+    background-image:url("assets/img/logo stark.png");
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
     margin-top: 1rem;
+    margin-bottom: 7rem;
     gap: 2rem;
 }
-.filtro{
-    width: 100%;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-   padding: 20px;
-   background-color: lightgray;
-}
+
 
 .card {
     display: flex;
     flex-direction: column;
-    background-color: #ffffff;
+    background-color: #dea856;
     border: 1px solid rgb(214, 214, 214);
     justify-content: center;
     align-items: center;
-    /* padding: 1rem; */
+    padding: 1rem;
     margin: 0rem 0rem;
     box-shadow: 2px 2px 10px rgba(101, 101, 101, 0.5);
+    
     
 }
 
@@ -100,7 +92,7 @@ main{
 
 button{
     width: 100px;
-    background-color: #1329e8;
+    background-color: #000000;
     color: white;
     padding: 0.5rem;
     border: none;
@@ -108,43 +100,128 @@ button{
     cursor: pointer;
 }
 
+button:hover{
+    background-color: #b41111;
+    color: white;
+}
 
+/* 1: temporada1 */
+.tmp1-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.tmp1-card img:hover {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+  }
+  
+  
+
+/* 2: temporada 2*/
+.tmp2-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.tmp2-card img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+@keyframes Flash {
+    0%, 100% {
+        filter: brightness(1)  ;
+      }
+    50% {
+        filter: brightness(1)   drop-shadow(10px 10px 10px rgb(255, 255, 255));
+        transform: scale(1.1);
+    }
+}
+
+/* 3: temporda 3*/
+
+.tmp3-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.tmp3 img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+
+
+/* 4: temporada 4*/
+.tmp4-container:hover {
+    background-color: #07003b;
+    color: white;
+    
+}
+.tmp4 img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+/* 5: temporada 5 */
+
+.tmp5-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.tmp5 img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+
+
+/* 6: temporada 6 */
+.tmp6-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.tmp6:hover  {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+
+
+/* 7: temporda 7*/
+
+.tmp7-container:hover {
+    background-color: #07003b;
+    color: #ffffff;
+}
+
+.tmp7 img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
+
+
+
+
+/* 8: tempordad 8 */
+.tmp8-container:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+
+.tmp8 img:hover {
+    transition: transform 0.3s ease;
+    animation: Flash 0.8s infinite;
+}
 
 
   
-/* SECTION: PÁGINAS */
-.numeros {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 ;
-    padding: 1.5rem 0;
-    position:fixed;
-    bottom: 80px;
-    z-index: 1;
-    gap: 0.5rem;
-    background-size: contain;
-    background-repeat: none;
-    width: 100%;
-}
-
-.numeros button {
-    background-color:rgb(208, 222, 80);
-    border: none;
-    position: relative;
-    color: #000000;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-
-
-
-
-
 
 
 
@@ -154,7 +231,7 @@ footer {
     display: flex;
     flex-direction: column;
     color: white;
-    background-color:#050e5d;
+    background-color:#1d0557;
     align-content: center;
     text-align: center;
     margin: 0;
@@ -163,13 +240,27 @@ footer {
     bottom: 0;
     z-index: 1;
 }
+.dragon{
+    width: 50px;
+}
+
+.dragon:hover {
+    background-color: #07003b;
+    color: white;
+}
+
+.dragon:hover .dragon img {
+   
+    animation: moveOut 1s infinite;
+}
+
 
 footer p, footer i {
-    margin: 0.2rem;
+    margin: 2rem;
     padding: 0;
 }
 
-.rrss {
+.rrss{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,33 +294,35 @@ main{
 footer{
     grid-area: footer;
 }
-.filtro{
-    grid-area: filtro;
-}
+
 
 
 /* MEDIA QUERYS */
 
-/* [576px, ...[ */
+
 @media (min-width:576px){
     .contenedor{
         display: grid;
         grid-template-columns: 20% 80%;
         grid-template-areas:
             "nav nav"
-            "filtro main"
-            "numeros numeros"
+            "main main"
             "footer footer";
     }
-   
+
     /* NAVBAR */
     .barritas{
         display: none;
     }
-
+    .logostark{
+        display:block;
+        width: 100px;
+        align-items: flex-end;
+    }
     .navbar {
-        background-color: #1329e8;
-        
+        background-color: #4d494a;
+        position: sticky;
+        z-index: 999;
     }
 
     .nav-text{
@@ -241,7 +334,9 @@ footer{
         transform: translate(2rem, 0.3rem); 
     }
 
-    
+    .nav-text a {
+        transform: translate(0,-0.7rem);
+    }
 
     /* MAIN */
 
@@ -264,44 +359,31 @@ footer{
         margin: 0rem 0rem;
     }
 
-    /* .card:hover p {
+    .card:hover p {
         padding: 2%;
-    } */
-
-    /* SECCIÓN: PÁGINAS */
-    .numeros {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 ;
-        padding: 1.5rem 0;
-        position:fixed;
-        bottom: 80px;
-        z-index: 1;
-        gap: 0.5rem;
-        background-size: cover;
-        background-repeat: none;
-        width: 100%;
     }
 
-  }
+    
+}
 
-@media (min-width:1150px) { 
 
-    .contenedorCard{
+@media (min-width:1128px) { 
+
+    .contenedor{
         display: grid;
         height: 100vh;
         max-height: max-content;
         grid-template-columns: 15% 85%;
         grid-template-rows: auto; 
         grid-template-areas:
-        "nav filtro"
         "nav main"
         "nav main"
         "nav main"
-        "footer numeros";
+        "nav main"
+        "footer footer";
     }
-    
+
+    /* NAVBAR */
     .navbar{
         padding-right: 0;
         align-items: flex-start;
@@ -309,7 +391,7 @@ footer{
         justify-content: flex-start;
         align-items: center;
         text-align: center;
-        background-color: #1329e8;
+        background-color: #4d494a;
         position: sticky;
         z-index: 999;
     }
@@ -346,9 +428,9 @@ footer{
         margin-bottom: 0rem;
     }
 
-    /* .card:hover p {
+    .card:hover p {
         padding: 2%;
-    } */
+    }
 
     img{
         height: 80%;
@@ -362,7 +444,7 @@ footer{
         border: 1px solid rgb(214, 214, 214);
         justify-content: center;
         align-items: center;
-        margin: 0 0 0 00px;
+        margin: 0 0 0 20px;
         padding-bottom: 2rem;
     }
 
@@ -373,13 +455,7 @@ footer{
         padding: 0;
     }
 
-    /* SECCIÓN: PÁGINAS */
-
-    .numeros{
-        bottom: 0px;
-        position: sticky;
-    }
-
+    
     /* FOOTER */
     footer {
         display: flex;
